# Hermetic-server

./: CMakeLists.txt  build.bat  encryption_test.cpp  ffs_test.cpp  imgui.ini  main.cpp  parallel_encryption_test.cpp
common/: asymmetric.h  common.h  enc_dec_AES.h  fileSys.cpp  fileSys.h  json_worker.cpp  json_worker.h  mdump.cpp  mdump.h
common/WLoger/: CMakeLists.txt  README.md  build.bat
common/WLoger/Include/: WLoger.h
common/WLoger/Source/: WLoger.cpp
common/WLoger/test/: test.cpp
libs/Codecrypt/: CMakeLists.txt
libs/Codecrypt/src/: hash.h  hashfile.cpp  pwrng.cpp
libs/ffs/include/: bitmap.h  disk.h  ffs_operations.h  tree.h
libs/ffs/src/: bitmap.c  disk.c  ffs_operations.c  mkfs.c  tree.c
libs/fftw3/: CMakeLists.txt
libs/imgui/: imgui_widgets.cpp
libs/imgui/backend/: imgui_impl_sdl.cpp
libs/stb/: stb_image.h  stb_image_write.h
libs/websocketpp/websocketpp/logger/: basic.hpp
libs/websocketpp/websocketpp/roles/: server_endpoint.hpp
sftp/: CMakeLists.txt  sshchannel.cpp  sshchannel.h  sshconst.h  sshlog.cpp  sshlog.h  sshpacket.cpp  sshpacket.h  sshsftp.cpp  sshsftp.h  sshtools.cpp  sshtools.h  sshtransport.cpp  sshtransport.h  sshutils.cpp  sshutils.h  tcpclient.cpp  tcpclient.h  tcpclient_bom.cpp  tcpclient_bom.h  utils.cpp  utils.h
sftp/bcrypt/: bcrypt_pbkdf.cpp  blf.h  blowfish.cpp
sftp/zip/: bits.h  deflate.cpp  zip.cpp  zip.h
src_client/: SettingsManager.cpp  SettingsManager.h  cryptographer.cpp  cryptographer.h  imgui.ini  mac_address.cpp  mac_address.h  popup_message.cpp  popup_message.h  settings.cpp  settings.h  ui.cpp  ui.h  uploader.cpp  uploader.h
src_client/ws/: WebsocketClient.cpp  WebsocketClient.h
src_server/: README.md  Readme.md  file_list.cpp  file_list.h  file_utils.cpp  main.cpp
src_server/additional/: common_server.h
src_server/client/: client_copy.cpp  client_copy.h
src_server/filesystem/: filesystem.cpp  filesystem.h
src_server/ws/: WebsocketServer.cpp  WebsocketServer.h
